[package]
name = "kvbench"
version = "0.2.2"
authors = ["Chen Chen <mail@roychan.org>"]
description = "A key-value store benchmark framework with customizable workloads"
edition = "2021"
readme = "README.md"
repository = "https://www.github.com/nerdroychan/kvbench"
license = "GPL-3.0"
keywords = ["benchmark", "key-value"]
categories = ["concurrency", "development-tools::profiling", "development-tools::testing"]
exclude = ["examples"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ahash = "0.8.11"
bincode = "1.3.3"
chashmap = { version = "2.2.2", optional = true }
clap = { version = "4.5.26", features = ["derive"] }
contrie = { version = "0.1.4", optional = true }
core_affinity = "0.8.1"
ctrlc = "3.4.5"
dashmap = { version = "6.1.0", features = ["inline"], optional = true }
env_logger = "0.11.6"
figment = { version = "0.10.19", features = ["toml", "env"] }
flurry = { version = "0.5.2", optional = true }
hashbrown = "0.14.5"
hdrhistogram = "7.5.4"
inventory = "0.3.17"
log = "0.4.25"
mio = { version = "1.0.3", features = ["net", "os-poll"] }
papaya = { version = "0.1.8", optional = true }
parking_lot = "0.12.3"
quanta = "0.12.5"
rand = "0.8.5"
rocksdb = { version = "0.22.0", optional = true }
scc = { version = "2.3.0", optional = true }
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
zipf = "7.0.1"

[dev-dependencies]
tempfile = "3.15.0"

[features]
chashmap = ["dep:chashmap"]
contrie = ["dep:contrie"]
dashmap = ["dep:dashmap"]
flurry = ["dep:flurry"]
papaya = ["dep:papaya"]
rocksdb = ["dep:rocksdb"]
scc = ["dep:scc"]

[profile.release-lto]
inherits = "release"
lto = true
