[package]
name = "kvbench"
version = "0.3.0"
authors = ["Chen Chen <mail@roychan.org>"]
description = "A key-value store benchmark framework with customizable workloads"
edition = "2021"
readme = "README.md"
repository = "https://github.com/nerdroychan/kvbench"
license = "MIT"
keywords = ["benchmark", "key-value"]
categories = ["concurrency", "development-tools::profiling", "development-tools::testing"]
exclude = ["examples"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bincode = "1.3.3"
chashmap = { version = "2.2.2", optional = true }
clap = { version = "4.5.60", features = ["derive"] }
contrie = { version = "0.1.4", optional = true }
core_affinity = "0.8.3"
ctrlc = "3.5.2"
dashmap = { version = "6.1.0", features = ["inline"], optional = true }
env_logger = "0.11.9"
figment = { version = "0.10.19", features = ["toml", "env"] }
flurry = { version = "0.5.2", optional = true }
hashbrown = "0.16.1"
hdrhistogram = "7.5.4"
inventory = "0.3.22"
log = "0.4.29"
mio = { version = "1.1.1", features = ["net", "os-poll"] }
papaya = { version = "0.2.3", optional = true }
parking_lot = "0.12.5"
quanta = "0.12.6"
rand = "0.10.0"
rand_distr = "0.6.0"
rocksdb = { version = "0.24.0", optional = true }
rustc-hash = "2.1.1"
scc = { version = "3.6.5", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.3"

[dev-dependencies]
tempfile = "3.25.0"

[features]
chashmap = ["dep:chashmap"]
contrie = ["dep:contrie"]
dashmap = ["dep:dashmap"]
flurry = ["dep:flurry"]
papaya = ["dep:papaya"]
rocksdb = ["dep:rocksdb"]
scc = ["dep:scc"]

[profile.release-lto]
inherits = "release"
lto = true
